# git-publish

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  git-publish  git-publish-dev  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
gp/: __main__.py  gitproject.py  main.py
resources/: commit-msg
src/git_publish/: __init__.py  git_project.py  github_project.py  gitlab_project.py  gitproject.py  main.py
tests/: test_create_change_id.py  test_main_helpers.py  test_update_commit_message_file.py
typings/: giturlparse.pyi
