[project]
name = "git-publish"
version = "0.1.0"
description = "A stack diff poor-man's solution"
readme = "README.md"
authors = [
    { name = "Warren Seine", email = "warren.seine@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gitpython >=3.1.41,<4",
    "python-dotenv >=1.0.0,<2",
    "python-gitlab >=5.6.0,<6",
    "pygithub >2.1.1,<3",
    "giturlparse >=0.12.0,<1",
]

[project.scripts]
git-publish = "git_publish:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit >=4.1.0,<5",
    "ruff >=0.9.9,<1",
    "pyright >=1.1.348,<2",
]
