[project]
name = "git-publish"
version = "0.1.0"
description = "A stack diff poor-man's solution"
readme = "README.md"
authors = [
    { name = "Warren Seine", email = "warren.seine@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["git", "publish", "stacked", "pull requests", "merge requests"]
dependencies = [
    "gitpython >=3.1.41,<4",
    "python-dotenv >=1.0.0,<2",
    "python-gitlab >=5.6.0,<6",
    "pygithub >2.1.1,<3",
    "giturlparse >=0.12.0,<1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Operating System :: OS Independent",
]

[project.scripts]
git-publish = "git_publish:main"


[project.urls]
Homepage = "https://github.com/warrenseine/git-publish"
Repository = "https://github.com/warrenseine/git-publish"
Issues = "https://github.com/warrenseine/git-publish/issues"
Changelog = "https://github.com/warrenseine/git-publish/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit >=4.1.0,<5",
    "ruff >=0.9.9,<1",
    "pyright >=1.1.348,<2",
    "pytest >=7.0.0,<9",
    "taskipy >=1.12.2,<2",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.taskipy.tasks]
lint = "uv run ruff check --output-format=concise . && uv run pyright"
format = "uv run ruff check --fix ."
test = "uv run pytest"
